# boost-type_traits

./: .gitignore  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/p8499/lang/ime/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: default.yaml  wu_zaonhe.dict.yaml  wu_zaonhe.schema.yaml
app/src/main/java/com/p8499/lang/ime/: ActivityPreference.java  ActivitySchemas.java  JniWrapper.java  Relation.java  RimeSession.java  ServiceIme.java  ViewCandidates.java  ViewInput.java
app/src/main/java/com/p8499/lang/ime/rime/: RimeCandidate.java  RimeCandidateListIterator.java  RimeCommit.java  RimeComposition.java  RimeConfig.java  RimeConfigIterator.java  RimeContext.java  RimeMenu.java  RimeSchemaListItem.java  RimeStatus.java  RimeTraits.java  Utils.java
app/src/main/jni/app/: CMakeLists.txt  Utils.cpp  Utils.hpp  WrapperRimeCandidate.cpp  WrapperRimeCandidate.hpp  WrapperRimeCommit.cpp  WrapperRimeCommit.hpp  WrapperRimeComposition.cpp  WrapperRimeComposition.hpp  WrapperRimeContext.cpp  WrapperRimeContext.hpp  WrapperRimeMenu.cpp  WrapperRimeMenu.hpp  WrapperRimeSchemaList.cpp  WrapperRimeSchemaList.hpp  WrapperRimeSchemaListItem.cpp  WrapperRimeSchemaListItem.hpp  WrapperRimeStatus.cpp  WrapperRimeStatus.hpp  WrapperRimeTraits.cpp  WrapperRimeTraits.hpp  app.cpp  app.hpp  test.cpp
app/src/main/jni/boost-filesystem/: CMakeLists.txt
app/src/main/jni/boost-locale/: CMakeLists.txt
app/src/main/jni/boost-regex/: CMakeLists.txt
app/src/main/jni/boost-system/: CMakeLists.txt
app/src/main/jni/iconv/: CMakeLists.txt
app/src/main/jni/leveldb/: CMakeLists.txt
app/src/main/jni/marisa-trie/: CMakeLists.txt
app/src/main/jni/miniglog/: CMakeLists.txt
app/src/main/jni/opencc/: CMakeLists.txt
app/src/main/jni/rime/: CMakeLists.txt
app/src/main/jni/yaml-cpp/: CMakeLists.txt
app/src/main/res/color/: candtext_tc.xml  popupitemmiddle_tc.xml
app/src/main/res/drawable/: cand_bg.xml  cand_bg_1.xml  cand_bg_2.xml  ic_backspace_black_24dp.xml  ic_caps_black_24dp.xml  ic_check_blue_24dp.xml  ic_enter_black_24dp.xml  ic_keyboard_grey_24dp.xml  ic_next_black_24dp.xml  ic_settings_grey_24dp.xml  ic_shift_black_24dp.xml  ic_shifted_black_24dp.xml  ic_space_black_24dp.xml  key_kbg.xml  key_kbg_1.xml  key_kbg_2.xml  key_kbg_3.xml  key_kbg_4.xml  keyboard_bg.xml  keyboard_bg_1.xml  keyboard_kbg.xml  keyboard_kbg_2.xml  keyboard_kbg_3.xml  keyboard_kbg_6.xml  menu_bg.xml  menu_bg_1.xml  menucheckable_bg.xml  menucheckable_bg_1.xml  menucheckable_bg_3.xml  menuitem_bg.xml  menuitem_bg_2.xml  opt_bg.xml  opt_bg_1.xml  opt_bg_2.xml  popupitem_bg.xml  popupitemfirst_bg.xml  popupitemfirst_bg_1.xml  popupitemfirst_bg_2.xml  popupitemlast_bg.xml  popupitemlast_bg_1.xml  (+7 more)
app/src/main/res/layout/: activity_preference.xml  activity_schemas.xml  activity_schemas_recycler.xml  service_ime_candidates.xml  service_ime_candidates_menu_recycler.xml  service_ime_input.xml  service_ime_input_popup1_itemfirst.xml  service_ime_input_popup1_itemlast.xml  service_ime_input_popup1_itemmiddle.xml  service_ime_input_popup1_itemsingle.xml
app/src/main/res/values/: strings.xml  style_cand.xml  style_candindex.xml  style_candtext.xml  style_compafter.xml  style_compbefore.xml  style_compsel.xml  style_key.xml  style_keyboard.xml  style_menu.xml  style_menucheckable.xml  style_menuitem.xml  style_opt.xml  style_optlabel.xml  style_optval.xml  style_popupitem.xml  style_popupitemfirst.xml  style_popupitemlast.xml  style_popupitemmiddle.xml  style_popupitemsingle.xml  styles.xml
app/src/main/res/xml/: ime.xml  keyboard_qwerty_lower.xml  keyboard_qwerty_upper.xml  keyboard_symbolic_lower.xml  keyboard_symbolic_upper.xml  relations_keycode_rime.xml  relations_meta_rime.xml  relations_utf8_rime.xml
app/src/test/java/com/p8499/lang/ime/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
miniglog/: logging.h
